--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <main>
         <h1>Welcome to My Website</h1>  
     </main>
-<!--	<script src="index.js"></script> -->
+<!--get rid!	<script src="index.js"></script> -->
   </body>
 </html>
